--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 <main>
-  <h1>GitHub Pages のサンプルです</h1>
-  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
+  <h1>GitHub Pages のサンプル</h1>
+  <a href="http://www.yahoo.co.jp/tipsnote/"><button>ヤッホー</button></a>
 </main>
 
 <script>
