--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
 <body>
 <main>
-  <h1>GitHub Pages のサンプル</h1>
+  <h1>宇栄原小　温度のサンプル</h1>
+  <h2>温度表示のテスト</h2><br>
+  <h2>4月30日  29℃　70％　<font color = red>■■■</font></h2><br>
+
+  <b>凡例　　</b> 
+  <font color = green>■■■</font> 快適　
+  <font color = yellow>■■■</font> 不快　
+  <font color = orange>■■■</font> 注意　
+  <font color = red>■■■</font> 危険　
+  <br>
+  <b>★ご安全に★</b><br>
   <a href="http://www.yahoo.co.jp/tipsnote/"><button>ヤッホー</button></a>
 </main>
 
