--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/03 12:03 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:04 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:05 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:06 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:07 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:08 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:09 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:10 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:11 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:12 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:13 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
-  <font size=+2> 2020/05/03 12:14 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:18 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:19 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:20 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:21 | 25 ℃ 73 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:22 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:23 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:24 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:25 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:26 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:27 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:28 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 12:29 | 25 ℃ 73 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
