--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/03 20:48 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:49 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:50 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:51 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:52 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:53 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:54 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:55 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:56 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:57 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:58 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/03 20:59 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:03 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:04 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:05 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:06 | 25 ℃ 72 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:07 | 25 ℃ 72 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:08 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:09 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:10 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:11 | 25 ℃ 72 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:12 | 25 ℃ 72 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:13 | 25 ℃ 72 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/03 21:14 | 25 ℃ 72 ％ 指数 25  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
