--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/04 10:33 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:34 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:35 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:36 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:37 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:38 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:39 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:40 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:41 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:42 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:43 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/04 10:44 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:48 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:49 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:50 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:51 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:52 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:53 | 27 ℃ 83 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:54 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:55 | 27 ℃ 84 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:56 | 27 ℃ 84 ％ 指数 28  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:57 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:58 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020/05/04 10:59 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
