--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/04 11:28 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:29 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:30 | 27 ℃ 83 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:31 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/04 11:41 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 12:06 | 27 ℃ 81 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 12:31 | 27 ℃ 80 ％ 指数 27  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/04 12:56 | 28 ℃ 79 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
