--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/04 11:33 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:34 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:35 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/04 11:36 | 27 ℃ 82 ％ 指数 28  <font color= orange >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/08 09:49 | 26 ℃ 58 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/08 10:14 | 26 ℃ 53 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/08 10:39 | 26 ℃ 52 ％ 指数 23  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/08 11:04 | 26 ℃ 52 ％ 指数 23  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
