--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/08 14:24 | 25 ℃ 56 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/08 14:49 | 25 ℃ 52 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/08 15:14 | 25 ℃ 51 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/08 15:39 | 25 ℃ 51 ％ 指数 22  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/08 18:09 | 27 ℃ 68 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/08 18:34 | 27 ℃ 69 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/08 18:59 | 27 ℃ 68 ％ 指数 26  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/08 19:24 | 27 ℃ 68 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
