--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/09 15:24 | 28 ℃ 66 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 15:49 | 28 ℃ 66 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 16:14 | 28 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 16:39 | 28 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/09 19:09 | 27 ℃ 48 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 19:34 | 26 ℃ 48 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 19:59 | 27 ℃ 51 ％ 指数 24  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/09 20:24 | 27 ℃ 54 ％ 指数 24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
