--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/09 16:39 | 28 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 17:04 | 28 ℃ 67 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 17:29 | 28 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 17:54 | 28 ℃ 56 ％ 指数 25  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/09 20:24 | 27 ℃ 54 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 20:49 | 27 ℃ 55 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 21:14 | 27 ℃ 57 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/09 21:39 | 27 ℃ 58 ％ 指数 25  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
