--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/09 22:04 | 27 ℃ 58 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 22:29 | 28 ℃ 59 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/09 22:54 | 28 ℃ 60 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/09 23:19 | 28 ℃ 60 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/10 01:49 | 28 ℃ 62 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/10 02:14 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/10 02:39 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/10 03:04 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
