--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/11 06:34 | 29 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 06:59 | 29 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 07:24 | 29 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 07:49 | 29 ℃ 67 ％ 指数 27  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/11 10:19 | 28 ℃ 73 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 10:44 | 28 ℃ 71 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/11 11:09 | 28 ℃ 54 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/11 11:34 | 28 ℃ 47 ％ 指数 24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
