--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/11 09:29 | 28 ℃ 74 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 09:54 | 28 ℃ 73 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 10:19 | 28 ℃ 73 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 10:44 | 28 ℃ 71 ％ 指数 28  <font color= orange >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/11 13:14 | 26 ℃ 41 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 13:39 | 26 ℃ 43 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 14:04 | 26 ℃ 42 ％ 指数 21  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/11 14:29 | 25 ℃ 43 ％ 指数 21  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
