--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/11 18:39 | 27 ℃ 47 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 19:04 | 26 ℃ 43 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 19:29 | 27 ℃ 45 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 19:54 | 27 ℃ 49 ％ 指数 23  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/11 22:24 | 28 ℃ 57 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 22:49 | 28 ℃ 57 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/11 23:14 | 28 ℃ 57 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/11 23:39 | 28 ℃ 58 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
