--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/11 20:44 | 27 ℃ 53 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 21:09 | 27 ℃ 55 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 21:34 | 28 ℃ 56 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/11 21:59 | 28 ℃ 56 ％ 指数 25  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/12 00:29 | 28 ℃ 59 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 00:54 | 28 ℃ 59 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 01:19 | 28 ℃ 59 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/12 01:44 | 28 ℃ 60 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
