--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/12 06:19 | 28 ℃ 62 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 06:44 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 07:09 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 07:34 | 28 ℃ 64 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/12 10:13 | 26 ℃ 47 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/12 10:38 | 26 ℃ 46 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/12 11:03 | 26 ℃ 45 ％ 指数 22  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/12 11:28 | 26 ℃ 46 ％ 指数 22  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
