--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/12 08:24 | 28 ℃ 76 ％ 指数 28  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/12 08:49 | 28 ℃ 78 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/12 09:23 | 28 ℃ 55 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/12 09:48 | 27 ℃ 49 ％ 指数 23  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/12 12:18 | 25 ℃ 47 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/12 12:43 | 25 ℃ 48 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/12 13:08 | 25 ℃ 48 ％ 指数 21  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/12 13:33 | 25 ℃ 49 ％ 指数 22  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
