--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/14 15:33 | 27 ℃ 60 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 15:58 | 27 ℃ 64 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 16:23 | 27 ℃ 64 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 16:48 | 27 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/14 19:18 | 25 ℃ 44 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 19:43 | 25 ℃ 44 ％ 指数 20  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 20:08 | 26 ℃ 47 ％ 指数 22  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/14 20:33 | 26 ℃ 50 ％ 指数 23  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
