--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/14 16:48 | 27 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 17:13 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 17:38 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 18:03 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/14 20:33 | 26 ℃ 50 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 20:58 | 26 ℃ 53 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 21:23 | 26 ℃ 54 ％ 指数 23  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/14 21:48 | 26 ℃ 56 ％ 指数 24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
