--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/14 18:03 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/14 18:28 | 28 ℃ 60 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 18:53 | 26 ℃ 46 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 19:18 | 25 ℃ 44 ％ 指数 21  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/14 21:48 | 26 ℃ 56 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 22:13 | 26 ℃ 57 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/14 22:38 | 27 ℃ 58 ％ 指数 24  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/14 23:03 | 27 ℃ 59 ％ 指数 24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
