--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 05:18 | 27 ℃ 65 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 05:43 | 27 ℃ 65 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 06:08 | 27 ℃ 65 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 06:33 | 27 ℃ 66 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 09:03 | 27 ℃ 79 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 09:28 | 27 ℃ 79 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 09:53 | 28 ℃ 79 ％ 指数 28  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/15 10:18 | 28 ℃ 77 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
