--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 07:48 | 27 ℃ 66 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 08:13 | 27 ℃ 67 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 08:38 | 27 ℃ 76 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 09:03 | 27 ℃ 79 ％ 指数 27  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 11:33 | 29 ℃ 74 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/15 11:58 | 29 ℃ 55 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 12:23 | 28 ℃ 51 ％ 指数 25  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/15 12:48 | 27 ℃ 46 ％ 指数 24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
