--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 10:43 | 29 ℃ 74 ％ 指数 28  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/15 11:08 | 29 ℃ 74 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/15 11:33 | 29 ℃ 74 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/15 11:58 | 29 ℃ 55 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 14:28 | 27 ℃ 45 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 14:53 | 27 ℃ 46 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 15:18 | 27 ℃ 44 ％ 指数 22  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/15 15:43 | 27 ℃ 45 ％ 指数 23  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
