--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 11:58 | 29 ℃ 55 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 12:23 | 28 ℃ 51 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 12:48 | 27 ℃ 46 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 13:13 | 27 ℃ 45 ％ 指数 22  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 15:43 | 27 ℃ 45 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 16:08 | 26 ℃ 48 ％ 指数 23  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 16:33 | 26 ℃ 44 ％ 指数 22  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/15 16:58 | 26 ℃ 45 ％ 指数 22  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
