--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 17:23 | 25 ℃ 45 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 17:48 | 25 ℃ 44 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 18:13 | 25 ℃ 45 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 18:38 | 25 ℃ 45 ％ 指数 20  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 21:08 | 27 ℃ 56 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 21:33 | 28 ℃ 57 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 21:58 | 28 ℃ 58 ％ 指数 25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/15 22:23 | 28 ℃ 60 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
