--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 18:38 | 25 ℃ 45 ％ 指数 20  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 19:03 | 25 ℃ 46 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 19:28 | 26 ℃ 46 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 19:53 | 26 ℃ 49 ％ 指数 23  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/15 22:23 | 28 ℃ 60 ％ 指数 25  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 22:48 | 28 ℃ 62 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/15 23:13 | 28 ℃ 62 ％ 指数 26  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/15 23:38 | 28 ℃ 63 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
