--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/15 20:43 | 27 ℃ 54 ％ 指数 24  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 21:08 | 27 ℃ 56 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 21:33 | 28 ℃ 57 ％ 指数 25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/15 21:58 | 28 ℃ 58 ％ 指数 25  <font color= green >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/16 00:28 | 28 ℃ 65 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/16 00:53 | 28 ℃ 64 ％ 指数 26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020/05/16 01:18 | 28 ℃ 65 ％ 指数 26  <font color= yellow >■■■</font></font><br>
+  <font size=+2> 2020/05/16 01:43 | 28 ℃ 66 ％ 指数 27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
