--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/16 09:38 | 29 ℃ 77 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 10:03 | 29 ℃ 77 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 10:28 | 29 ℃ 76 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 10:53 | 29 ℃ 75 ％ 指数 29  <font color= orange >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/16 13:23 | 27 ℃ 42 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/16 13:48 | 27 ℃ 41 ％ 指数 22  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/16 14:13 | 26 ℃ 42 ％ 指数 22  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/16 14:38 | 26 ℃ 41 ％ 指数 21  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
