--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ p.example3 { zoom:  70%;}
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/16 10:53 | 29 ℃ 75 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 11:18 | 30 ℃ 74 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 11:43 | 30 ℃ 73 ％ 指数 29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020/05/16 12:08 | 29 ℃ 54 ％ 指数 26  <font color= yellow >■■■</font></font><br>
@@ -29,6 +28,7 @@ p.example3 { zoom:  70%;}
   <font size=+2> 2020/05/16 14:38 | 26 ℃ 41 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/16 15:03 | 26 ℃ 40 ％ 指数 21  <font color= green >■■■</font></font><br>
   <font size=+2> 2020/05/16 15:28 | 25 ℃ 41 ％ 指数 21  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020/05/16 15:53 | 25 ℃ 48 ％ 指数 22  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
