--- a/index.html
+++ b/index.html
@@ -3,32 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <title>temp monitor : GitHub Pages Sample</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css">
 </head>
-<style type="text/css">
-p.example1 { zoom: 2;}
-p.example2 { zoom: 150%;}
-p.example3 { zoom:  70%;}
-</style>
 <body>
 <main>
-  <h1>宇栄原小学校屋内運動場等改築工事（建築）</h1>
+  <h1>宇栄原小学校屋内運動場等<br>　　　　　改築工事（建築）</h1>
+  <h2>佐平建設・正吉建設ＪＶ</h2>
 <h2><button>
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020/05/17 13:33 | 30 ℃ 65 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/17 13:58 | 30 ℃ 65 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/17 14:23 | 30 ℃ 64 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/17 14:48 | 30 ℃ 64 ％ 指数 28  <font color= yellow >■■■</font></font><br>
-  <font size=+2> 2020/05/17 15:13 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 15:38 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 16:03 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 16:28 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 16:53 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 17:18 | 30 ℃ 64 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 17:43 | 30 ℃ 65 ％ 指数 28  <font color= orange >■■■</font></font><br>
-  <font size=+2> 2020/05/17 18:08 | 30 ℃ 65 ％ 指数 28  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020-05-17 15:51 | 31 ℃ | 84 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 16:06 | 31 ℃ | 84 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 16:21 | 31 ℃ | 83 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 16:36 | 31 ℃ | 83 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 16:51 | 31 ℃ | 83 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 17:06 | 31 ℃ | 81 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 17:21 | 31 ℃ | 82 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 17:36 | 31 ℃ | 82 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 17:51 | 31 ℃ | 81 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 18:06 | 31 ℃ | 81 ％|指数  32  <font color= red >■■■</font></font><br>
+  <font size=+2> 2020-05-17 18:21 | 30 ℃ | 76 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020-05-17 18:36 | 30 ℃ | 77 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
