--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020-05-17 18:06 | 31 ℃ | 81 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+2> 2020-05-17 18:21 | 30 ℃ | 76 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-17 18:36 | 30 ℃ | 77 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-17 18:51 | 30 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+2> 2020-05-17 20:21 | 30 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-17 20:36 | 30 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-17 20:51 | 30 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020-05-17 21:06 | 30 ℃ | 73 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
