--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020-05-18 04:50 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 05:05 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 05:20 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 05:35 | 30 ℃ | 80 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+2> 2020-05-18 07:05 | 29 ℃ | 79 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 07:20 | 30 ℃ | 79 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 07:35 | 30 ℃ | 79 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020-05-18 07:50 | 31 ℃ | 78 ％|指数  31  <font color= red >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
