--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
-  <p class="example2">熱中症に注意</p>
+  <font size = +2>熱中症に注意</font><br>
   <font size=+1> 2020-05-18 20:12 | 28 ℃ | 85 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 20:20 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 20:35 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
