--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <font size=+1> 2020-06-01 20:40 | 27 ℃ | 84 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 20:55 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-06-01 21:10 | 27 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-06-01 21:25 | 26 ℃ | 85 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
