--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-06-19 05:44 | 28 ℃ | 82 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 05:59 | 28 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 06:14 | 27 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-06-19 06:29 | 28 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-06-19 07:59 | 30 ℃ | 93 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-19 08:14 | 31 ℃ | 92 ％|指数  33  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-06-19 08:29 | 32 ℃ | 91 ％|指数  34  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-06-19 08:44 | 32 ℃ | 89 ％|指数  34  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
